# Dao-Windows-Agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: CODEOWNERS  ci-syntax-ignore.txt
.github/workflows/: ci.yml  dao-auto-merge.yml  dao-automerge.yml  dao-ci.yml  dao-pr-flow.yml
bridge/: README.md  __init__.py  mcp.py  model_driver.py  server.py  service.py  subplugin_host.py
bridge/subplugin_specs/: README.md  homeassistant.json
coldstart/: README.md  RUNBOOK.md  up.sh
core/: __init__.py  accounts.py  desktop_router.py  dispatch.py  environment.py  handoff.py  macros.py  rdp_target.py  session_activator.py  subplugin.py  ui_nodes.py
core/adapter/: base.py  (+9 more)
desktop/: accounts.example.json  guacd.sh  test-multi.html  test.html  up_desktop.sh
docs/: HANDOFF-交接.md  三插件融合架构.md  兜底-通用AI配置Runbook-任意Windows多RDP接入.md  全链路架构分析.md  单账号分身-应用层隔离.md  单账号分身-通用隔离层.md  后端换机与输入并发协作.md  四大板块-底层解构.md  归一插件-子板块收编.md  接力棒-四大板块进度回溯.md  正本清源-桌面级路由本源.md  调研-任意环境接入-方法全景与装即用边界.md  验证-多路并发闭环实测-DESKTOP-MASTER.md  验证-真机多会话实测报告-DESKTOP-MASTER.md
tests/: test_accounts.py  test_bridge.py  test_browser_profile.py  test_clone_isolation.py  test_clone_lifecycle.py  test_core.py  test_desktop_profile.py  test_desktop_router.py  test_dispatch.py  test_environment.py  test_handoff.py  test_ide.py  test_isolation_layer.py  test_macros.py  test_mcp.py  test_model_driver.py  test_modes.py  test_osctl_driver.py  test_proxy_fusion.py  test_rdp_target.py  test_service_lifecycle_macros.py  test_session_activator.py  test_subplugin_host.py  test_ui_nodes.py
vm-replica/: MIGRATED.md
(+187 files in other folders)
